Sforce8 Project Data/src/objects/TimeassinCustomObject2__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ご予約</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipName>timeasignG47J</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ご利用</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>時間割り</relationshipLabel>
        <relationshipName>timeassignCjQd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <formula>DATEVALUE(Field1__r.EntryTime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ご利用日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TIME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>お時間</label>
        <referenceTo>TIME__c</referenceTo>
        <relationshipLabel>時間割り</relationshipLabel>
        <relationshipName>timeassignecQ1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>時間割</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>時間割当#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>